# kahoot_cli

./: README.md  kahoot-cli.py  pyproject.toml
kahoot_cli/: __init__.py  __main__.py  kahoot_cli.py
kahoot_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
