[build-system]
requires = ["setuptools >= 77.0.3", "selenium >= 4.41.0", "termcolor >= 3.3.0", "readchar >= 4.2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "kahoot_cli"
version = "1.0.1"
readme = "README.md"
authors = [
  { name="Aquaticsanti", email="aquaticsanti@gmail.com" },
]
description = "A module/CLI tool to interact with a kahoot client (via Selenium) and play a quiz."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "	GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Aquaticsanti/kahoot_cli"
Issues = "https://github.com/Aquaticsanti/kahoot_cli/issues"
Documentation = "https://github.com/Aquaticsanti/kahoot_cli/wiki"